# composed-video-retrieval

./: .gitignore  README.md  前后端接口说明.md
backend/: README.md  app.py  build_index.py  config.py  pyproject.toml  runtime.py  strip_ckpt.py  text_utils.py
backend/model/: __init__.py  base.py  combiner.py
backend/model/backbone/: __init__.py  clip.py  model.py
docs/: 前后端接口说明.md
docs/superpowers/specs/: 2026-06-02-restructure-design.md
frontend/: README.md  index.html
frontend/src/: app.js  styles.css
