[project]
name = "cvr-backend"
version = "0.1.0"
description = "Composed video retrieval — serving API (FDCA + AIM)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "clip",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "faiss-cpu>=1.8",
    "numpy>=1.24",
    "packaging>=23",
    "pillow>=10",
    "torch>=2.10",
    "torchvision>=0.15",
    "tqdm>=4.67",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
